--- a/package.json
+++ b/package.json
@@ -41,12 +41,7 @@
     "lib": "lib",
     "src": "src"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sansekai/Wa-OpenAI.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Sansekai/Wa-OpenAI/issues"
-  },
-  "homepage": "https://github.com/Sansekai/Wa-OpenAI#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
